# oa

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml  generateDoxygen.sh
docs/: _c_orthogonal_array_8cpp.html  _c_orthogonal_array_8h.html  _c_orthogonal_array_8h_source.html  _test_class_8h.html  _test_class_8h_source.html  ak_8h.html  akn_8cpp.html  annotated.html  classoa_test_1_1matrix_test-members.html  classoa_test_1_1matrix_test.html  classoa_test_1_1runif_test-members.html  classoa_test_1_1runif_test.html  deprecated.html  files.html  galdef_8h_source.html  galois_8h.html  globals_func.html  index.html  namespaceoacpp.html  namespaceoacpp_1_1galoisfield.html  namespaceoacpp_1_1oaaddelkemp.html  oa_8h.html  oa__r_8h_source.html  pages.html  primes_8h_source.html  primes_test_8h_source.html  runif_test_8h_source.html  rutils_test_8cpp.html  rutils_test_8h.html  structoacpp_1_1_g_f.html  todo.html  xtndispatch_8h_source.html
html/: _c_orthogonal_array_8cpp.html  _c_orthogonal_array_8h.html  _c_orthogonal_array_8h_source.html  _c_orthogonal_array_test_8cpp.html  _c_orthogonal_array_test_8h.html  _c_orthogonal_array_test_8h_source.html  _common_defines_8h.html  _common_defines_8h_source.html  _o_a_test_class_8h_source.html  ak3_8cpp.html  ak_8h.html  ak_8h_source.html  akconst_8cpp.html  akn_8cpp.html  annotated.html  classes.html  classoa_test_1_1_c_orthogonal_array_test-members.html  classoa_test_1_1_c_orthogonal_array_test.html  classoa_test_1_1_o_a_test_class-members.html  classoa_test_1_1_o_a_test_class.html  classoa_test_1_1matrix_test-members.html  classoa_test_1_1matrix_test.html  files.html  (+84 more)
oa_nb/: CMakeLists.txt  cmakeshell.bat  deployoa.bat  documentWithDoxygen.bat  doxygen.config  rcmdcheckoa.bat
oa_nb/doxygen/html/: _c_orthogonal_array_test_8cpp.html  _c_orthogonal_array_test_8h_source.html  _common_defines_8h_source.html  _test_class_8cpp.html  ak_8h_source.html  classes.html  classoa_test_1_1_test_class-members.html  classoa_test_1_1primes_test.html  classoa_test_1_1rutils_test-members.html  classoa_test_1_1rutils_test.html  classoacpp_1_1_c_orthogonal_array-members.html  classoacpp_1_1_c_orthogonal_array.html  classoacpp_1_1matrix-members.html  construct_8cpp.html  construct_8h.html  construct_8h_source.html  dir_610d9090c5349eaececbe6b3e11e1b54.html  dir_76d714777fd18e0e8a02bc447e6375f6.html  functions.html  functions_func.html  galdef_8h.html  galois_8h_source.html  gfields_8cpp.html  globals.html  globals_defs.html  hierarchy.html  index.html  matrix_8h.html  matrix_8h_source.html  matrix_test_8cpp.html  matrix_test_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespaceoacpp_1_1oaconstruct.html  namespaceoacpp_1_1oastrength.html  namespaceoacpp_1_1primes.html  namespaceoarutils.html  namespaces.html  oa_8cpp.html  oa__r_8cpp.html  (+17 more)
oa_nb/doxygen/html/search/: all_61.js  all_62.js  all_64.js  all_72.js  all_73.js  classes_63.js  classes_74.js  defines_70.js  files_74.js  functions_63.js  functions_64.js  functions_67.js  functions_72.js  functions_74.js  search.js
oa_nb/oa_r/: Makefile  oa_r.cpp  oa_r.h  oa_r_utils.h
oa_nb/oa_r/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
oa_nb/oalhslib/: CMakeLists.txt  oaLHS.cpp  oaLHS.h
oa_nb/oalhslib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
oa_nb/oalhstest/: CMakeLists.txt  OaLHSTest.cpp  OaLHSTest.h  main.cpp
oa_nb/oalhstest/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
oa_nb/oalib/: CMakeLists.txt  COrthogonalArray.cpp  COrthogonalArray.h  CommonDefines.h  ak.h  ak3.cpp  akconst.cpp  akn.cpp  construct.cpp  construct.h  galdef.h  galois.cpp  galois.h  gfields.cpp  matrix.h  oa.cpp  oa.h  primes.cpp  primes.h  runif.cpp  runif.h  rutils.cpp  rutils.h  xtndeclare.h  xtndispatch.h  xtnset.h
oa_nb/oalib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
oa_nb/oatest/: CMakeLists.txt  COrthogonalArrayTest.cpp  COrthogonalArrayTest.h  OATestClass.cpp  OATestClass.h  TestClass.cpp  TestClass.h  main.cpp  matrixTest.cpp  matrixTest.h  primesTest.cpp  primesTest.h  runifTest.cpp  runifTest.h  rutilsTest.cpp  rutilsTest.h
oa_nb/oatest/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/oa_r/: CMakeLists.txt
src/oalhstest/: CMakeLists.txt  OaLHSTest.cpp  OaLHSTest.h  cmake_install.cmake  main.cpp  oalhstest.vcxproj  oalhstest.vcxproj.filters
src/oatest/: CMakeLists.txt  COrthogonalArrayTest.cpp  COrthogonalArrayTest.h  GaloisFieldTest.cpp  GaloisFieldTest.h  OATestClass.cpp  OATestClass.h  cmake_install.cmake  galoisTest.cpp  galoisTest.h  gfieldsTest.cpp  gfieldsTest.h  main.cpp  matrixTest.cpp  matrixTest.h  oatest.vcxproj  oatest.vcxproj.filters  primesTest.cpp  primesTest.h  runifTest.cpp  runifTest.h  rutilsTest.cpp  rutilsTest.h
(+450 files in other folders)
